--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,4 @@
 [build]
-    command = "npm run build"
-    publisth = "out"
-
-[[plugins]]
-    package = "@netlify/plugin-nextjs"
-
-[context.production.environment]
-NEXT_SERVERLESS = "true"
-NODE_ENV = "production"
+    command = ""
+    publisth = "out_functions"
+    publish = "out_publish"
