--- a/package.json
+++ b/package.json
@@ -28,7 +28,20 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^2.0.1",
     "autoprefixer": "^10.2.4",
+    "next-on-netlify": "^2.8.7",
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3"
   }
-}
+},
+
+{
+  "name": "next-netlify-github-actions-starter",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "postbuild": "next-on-netlify"
+  },
+},
