--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
 [build]
-    command = ""
-    publisth = "out_functions"
-    publish = "out_publish"
+    command = "npm run build"
+    publish = "out"
+
+[[plugins]]
+    package = "@netlify/plugin-nextjs"
