--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "sass": "^1.32.8",
     "sendgrid": "^5.2.3"
   },
   "devDependencies": {
