creating new function for stripe checkout sessions

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "sass": "^1.32.8",
-    "sendgrid": "^5.2.3"
+    "sendgrid": "^5.2.3",
+    "use-shopping-cart": "^3.0.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^2.0.1",
